# RGBDFaceReconstruction

./: .gitignore  .gitmodules  BFMContainer.cpp  BFMContainer.h  BFMOptimizer.cpp  BFMOptimizer.h  CMakeLists.txt  FreeImageHelper.cpp  LandmarkDetector.cpp  LandmarkDetector.h  MeshFileHelper.h  OpenCVImgCropper.cpp  OpenCVImgCropper.h  PointCloud.h  ProcrustesAligner.h  README.md  SimpleMesh.h  VirtualSensor.h  common.h  main.cpp
Model/BFM/: BFM_fitting_vertices_only.csv  BFM_our_landmarks.csv  our_fitting_vertices_only.anl  our_landmarks68_2019bfm.anl  our_landmarks68_2019bfm_face12.anl
Scripts/: BFM_landmarks.csv  BFM_landmarks.off  convertAllPcd.m  pcd2ply.m  readAlign.py  readLandmarks.m  saveBFMLandmarks.m
